# ProyectoFinalVisionArtificial

ProyectoFinal/: CMakeLists.txt  Clase.cpp  Script.cpp  Script.h
